[lworld] C1 should return default value for uninitialized non-static Q fields

XMLWordPrintable

      Revision a1bdb6bccfdd of the valhalla/lworld repo fails this line in the test with -XX:

      http://hg.openjdk.java.net/valhalla/valhalla/file/a1bdb6bccfdd/test/hotspot/jtreg/runtime/valhalla/valuetypes/FlattenableSemanticTest.java#l78

              Asserts.assertNotNull(test.fij, "Invalid null value for unitialized flattenable field");

      test.fij is an instance field of signature "QJumboValue;", which is flattenable, but not flattened due to its instance size.

      To fix this, the code generated by C1 should load test.fij as a regular oop. If the result is NULL, replace the result with JumboValue.default.

            Assignee:
            Ioi Lam
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: