8220269: [lworld] C1 should return default value for uninitialized non-static Q fields

Reviewed-by: thartmann